# AIE

./: README.md  pyproject.toml
Notebooks/: credentials.example  example.txt  general.ipynb  models_become_agents.ipynb  working_with_models.ipynb
Notebooks/.nb_assets/: model_storage.html
