[project]
name = "aie"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = ["bitsandbytes-windows (>=0.37.5,<0.38.0)", "torch (>=2.6.0,<3.0.0)", "torchvision (>=0.21.0,<0.22.0)", "transformers (>=4.52.4,<5.0.0)", "rich (>=14.0.0,<15.0.0)", "bitsandbytes (>=0.46.0,<0.47.0)", "accelerate (>=1.8.1,<2.0.0)", "peft (>=0.15.2,<0.16.0)", "datasets (>=3.6.0,<4.0.0)", "langchain (>=0.3.26,<0.4.0)", "langgraph (>=0.4.8,<0.5.0)", "langchain-community (>=0.3.26,<0.4.0)", "langchain-huggingface (>=0.3.0,<0.4.0)", "gguf (>=0.17.1,<0.18.0)", "safetensors (>=0.5.3,<0.6.0)", "json-repair (>=0.47.3,<0.48.0)"]

[tool.poetry.dependencies]
torch = {source = 'pytorch-cuda'}
torchvision = {source = 'pytorch-cuda'}

[[tool.poetry.source]]
name = "pytorch-cuda"
url = "https://download.pytorch.org/whl/cu124"
priority = "supplemental"
[tool.poetry.group.dev.dependencies]
ipywidgets = "^8.1.7"

